# test-meson-custom_target

./: README.md  meson.build
scripts/: translate.sh
src/: input.txt
